--- a/components/plasmic/amap_website/PlasmicContact.module.css
+++ b/components/plasmic/amap_website/PlasmicContact.module.css
@@ -24,6 +24,7 @@
   width: 100%;
   height: auto;
   max-width: 80%;
+  margin-top: var(--token-7R6fY6Np7);
   min-width: 0;
   padding: 0px;
 }
@@ -34,92 +35,14 @@
     padding-left: var(--token-eReirMpIv);
   }
 }
-.freeBox__jImQ {
-  flex-direction: row;
-  display: flex;
-  position: relative;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  margin-top: var(--token-63kTP6Ueu);
-  margin-bottom: var(--token-2zjFq4DPV);
-  min-width: 0;
-  padding: 0px;
-}
-.freeBox__jImQ > :global(.__wab_flex-container) {
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: stretch;
-  min-width: 0;
-  margin-left: calc(0px - var(--token-2zjFq4DPV));
-  width: calc(100% + var(--token-2zjFq4DPV));
-}
-.freeBox__jImQ > :global(.__wab_flex-container) > *,
-.freeBox__jImQ > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.freeBox__jImQ > :global(.__wab_flex-container) > picture > img,
-.freeBox__jImQ
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
-  margin-left: var(--token-2zjFq4DPV);
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .freeBox__jImQ {
-    display: flex;
-    flex-direction: column;
-  }
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .freeBox__jImQ > :global(.__wab_flex-container) {
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    margin-left: calc(0px - 0px);
-    width: calc(100% + 0px);
-    margin-top: calc(0px - var(--token-2zjFq4DPV));
-    height: calc(100% + var(--token-2zjFq4DPV));
-  }
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .freeBox__jImQ > :global(.__wab_flex-container) > *,
-  .freeBox__jImQ > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-  .freeBox__jImQ > :global(.__wab_flex-container) > picture > img,
-  .freeBox__jImQ
-    > :global(.__wab_flex-container)
-    > :global(.__wab_slot)
-    > picture
-    > img {
-    margin-left: 0px;
-    margin-top: var(--token-2zjFq4DPV);
-  }
-}
-.img {
-  position: relative;
-  object-fit: contain;
-  width: auto;
-  height: 50px;
-}
-.img > picture > img {
-  object-fit: contain;
-}
-.img > .__wab_img-spacer > img {
-  object-fit: contain;
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .img {
-    height: 100px;
-    flex-shrink: 0;
-  }
-}
 .h1 {
   color: var(--token-pf4RLfMl0);
-  font-family: var(--token-ongjxvNd3);
-  font-weight: 500;
+  font-family: var(--token-q1R6Co1cF);
+  font-weight: 900;
   font-size: 48px;
   text-align: left;
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: var(--token-7R6fY6Np7);
   width: auto;
   height: auto;
   letter-spacing: normal;
@@ -127,290 +50,159 @@
 @media (min-width: 0px) and (max-width: 768px) {
   .h1 {
     max-width: 100%;
-    margin-top: calc(0px + var(--token-2zjFq4DPV)) !important;
   }
 }
-.text__yQPy6 {
+.freeBox___33Za {
+  display: flex;
   position: relative;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   width: 100%;
   height: auto;
-  font-family: var(--token-ongjxvNd3);
+  max-width: 100%;
+  margin-bottom: var(--token-63kTP6Ueu);
+  min-width: 0;
+}
+.img__l8Qw5 {
+  position: relative;
+  object-fit: cover;
+  max-width: 100%;
+  width: 100px;
+  height: 100px;
   margin-bottom: var(--token-2zjFq4DPV);
-  min-width: 0;
+  flex-shrink: 0;
 }
-.columns {
-  flex-direction: row;
-  display: flex;
-  position: relative;
-  width: 100%;
-  height: auto;
-  flex-shrink: 1;
-  min-width: 0;
-  padding: 0px;
+.img__l8Qw5 > picture > img {
+  object-fit: cover;
 }
-.columns > :global(.__wab_flex-container) {
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: stretch;
-  min-width: 0;
-  margin-left: calc(0px - var(--token-L5ZvEOVLJ));
-  width: calc(100% + var(--token-L5ZvEOVLJ));
+.img__l8Qw5 > .__wab_img-spacer > img {
+  object-fit: cover;
 }
-.columns > :global(.__wab_flex-container) > :nth-child(2n + 1) {
-  width: calc((100% - 2 * var(--token-L5ZvEOVLJ)) * 6 / 12);
-}
-.columns > :global(.__wab_flex-container) > :nth-child(2n + 2) {
-  width: calc((100% - 2 * var(--token-L5ZvEOVLJ)) * 6 / 12);
-}
-.columns > :global(.__wab_flex-container) > *,
-.columns > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.columns > :global(.__wab_flex-container) > picture > img,
-.columns
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
-  margin-left: var(--token-L5ZvEOVLJ);
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .columns {
-    width: 100%;
-    height: auto;
-    flex-direction: row;
-    max-width: 100%;
-    min-width: 0;
-  }
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .columns > :global(.__wab_flex-container) {
-    flex-direction: row;
-    flex-wrap: wrap;
-    min-width: 0;
-    margin-top: calc(0px - var(--token-zOZyz0Vdx));
-    height: calc(100% + var(--token-zOZyz0Vdx));
-  }
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .columns > :global(.__wab_flex-container) > :nth-child(1n + 1) {
-    width: calc((100% - 1 * var(--token-L5ZvEOVLJ)) * 12 / 12);
-  }
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .columns > :global(.__wab_flex-container) > *,
-  .columns > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-  .columns > :global(.__wab_flex-container) > picture > img,
-  .columns
-    > :global(.__wab_flex-container)
-    > :global(.__wab_slot)
-    > picture
-    > img {
-    margin-top: var(--token-zOZyz0Vdx);
-  }
-}
-.column__uhw41 {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  justify-content: flex-start;
-  align-items: center;
-  min-width: 0;
-  padding: 0px;
-}
-.contactForm:global(.__wab_instance) {
-  position: relative;
-}
-.column__jdIze {
-  flex-direction: column;
-  display: flex;
-  position: relative;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  min-width: 0;
-  padding: 0px;
-}
-.column__jdIze > :global(.__wab_flex-container) {
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  min-width: 0;
-  margin-top: calc(0px - var(--token-eReirMpIv));
-  height: calc(100% + var(--token-eReirMpIv));
-}
-.column__jdIze > :global(.__wab_flex-container) > *,
-.column__jdIze > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.column__jdIze > :global(.__wab_flex-container) > picture > img,
-.column__jdIze
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
-  margin-top: var(--token-eReirMpIv);
-}
-.text__jpPn8 {
-  position: relative;
-  width: 100%;
-  height: auto;
-  max-width: 800px;
-  font-family: var(--token-ongjxvNd3);
-  font-weight: 700;
-  font-size: 20px;
-  color: var(--token-WNBJHso-i);
-  min-width: 0;
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .text__jpPn8 {
-    width: auto;
-    text-align: center;
-  }
-}
-.contactInfos {
-  flex-direction: column;
-  display: flex;
-  position: relative;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  margin-bottom: var(--token-eReirMpIv);
-  min-width: 0;
-  padding: 0px;
-}
-.contactInfos > :global(.__wab_flex-container) {
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: stretch;
-  min-width: 0;
-  margin-top: calc(0px - var(--token-xmbQtwPzW));
-  height: calc(100% + var(--token-xmbQtwPzW));
-}
-.contactInfos > :global(.__wab_flex-container) > *,
-.contactInfos > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.contactInfos > :global(.__wab_flex-container) > picture > img,
-.contactInfos
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
-  margin-top: var(--token-xmbQtwPzW);
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .contactInfos {
-    width: auto;
-    align-self: auto;
-  }
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .contactInfos > :global(.__wab_flex-container) {
-    justify-content: flex-start;
-    align-items: center;
-  }
-}
-.freeBox___9W2Z {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  min-width: 0;
-  padding: 0px;
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .freeBox___9W2Z {
-    width: auto;
-  }
-}
-.text__rAyWu {
+.text___0Jl4Z {
+  color: var(--token-B133__sIH);
+  font-family: var(--token-q1R6Co1cF);
+  font-size: 30px;
+  text-align: center;
   width: auto;
   height: auto;
   max-width: 800px;
-  font-weight: 400;
-  font-family: var(--token-ongjxvNd3);
-  font-size: 20px;
-  color: #535353;
-  margin: 0px var(--token-xmbQtwPzW) 0px 0px;
+  background: url("/plasmic/amap_website/images/bannerBlue.svg") top 50% left 50% / contain no-repeat;
+  padding: 16px 36px;
+  margin: 0px 0px 16px;
 }
-.freeBox__azpD0 {
-  width: auto;
-  height: auto;
-  max-width: 800px;
-  display: flex;
-  flex-direction: row;
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .freeBox__azpD0 {
-    display: flex;
+@media (max-width: 640px) {
+  .text___0Jl4Z {
+    font-size: 24px;
   }
 }
-.slotTargetPhoneNumber {
-  font-family: var(--token-ongjxvNd3);
-  font-size: 20px;
-  font-weight: 700;
-  color: #535353;
-}
-.freeBox__tQ04 {
-  width: 100%;
-  height: auto;
-  max-width: 800px;
-  display: flex;
-  flex-direction: row;
-  min-width: 0;
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .freeBox__tQ04 {
-    display: flex;
-    align-self: auto;
-    align-items: center;
-    justify-content: center;
-  }
-}
-.text__t975S {
+.email {
   position: relative;
   width: auto;
   height: auto;
   max-width: 800px;
   font-family: var(--token-ongjxvNd3);
-  font-weight: 500;
-  font-size: 20px;
-  margin: 0px var(--token-xmbQtwPzW) 0px 0px;
-}
-.slotTargetEmail {
-  font-family: var(--token-ongjxvNd3);
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 700;
-  color: #535353;
+  text-align: center;
 }
-.text__ulc9U {
+@media (max-width: 640px) {
+  .email {
+    font-size: 24px;
+  }
+}
+.img___5Khuj {
   position: relative;
-  width: 100%;
+  object-fit: cover;
+  max-width: 100%;
+  width: 100px;
+  height: 100px;
+  margin-top: var(--token-63kTP6Ueu);
+  margin-bottom: var(--token-2zjFq4DPV);
+  flex-shrink: 0;
+}
+.img___5Khuj > picture > img {
+  object-fit: cover;
+}
+.img___5Khuj > .__wab_img-spacer > img {
+  object-fit: cover;
+}
+.text__w8G0I {
+  color: var(--token-B133__sIH);
+  font-family: var(--token-q1R6Co1cF);
+  font-size: 30px;
+  text-align: center;
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 800px;
+  background: url("/plasmic/amap_website/images/bannerYellow.svg") top 50% left 50% / contain no-repeat;
+  padding: 16px 36px;
+  margin: 0px 0px 16px;
+}
+@media (max-width: 640px) {
+  .text__w8G0I {
+    font-size: 24px;
+  }
+}
+.phone {
+  position: relative;
+  width: auto;
   height: auto;
   max-width: 800px;
   font-family: var(--token-ongjxvNd3);
+  font-size: 30px;
   font-weight: 700;
-  font-size: 20px;
-  color: var(--token-WNBJHso-i);
-  min-width: 0;
+  text-align: center;
 }
-@media (min-width: 0px) and (max-width: 768px) {
-  .text__ulc9U {
-    width: auto;
-    text-align: center;
+@media (max-width: 640px) {
+  .phone {
+    font-size: 24px;
+  }
+}
+.img___9UsEl {
+  position: relative;
+  object-fit: cover;
+  max-width: 100%;
+  width: 100px;
+  height: 100px;
+  margin-bottom: var(--token-2zjFq4DPV);
+  margin-top: var(--token-63kTP6Ueu);
+  flex-shrink: 0;
+}
+.img___9UsEl > picture > img {
+  object-fit: cover;
+}
+.img___9UsEl > .__wab_img-spacer > img {
+  object-fit: cover;
+}
+.text__kt2Xc {
+  color: var(--token-B133__sIH);
+  font-family: var(--token-q1R6Co1cF);
+  font-size: 30px;
+  text-align: center;
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 800px;
+  background: url("/plasmic/amap_website/images/bannerMelon.svg") top 50% left 50% / contain no-repeat;
+  padding: 16px 36px;
+  margin: 0px 0px 16px;
+}
+@media (max-width: 640px) {
+  .text__kt2Xc {
+    font-size: 24px;
   }
 }
 .addressInfos {
   display: flex;
   position: relative;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   justify-content: flex-start;
-  width: 100%;
+  width: auto;
   height: auto;
   max-width: 100%;
-  min-width: 0;
   padding: 0px;
 }
 @media (min-width: 0px) and (max-width: 768px) {
@@ -418,7 +210,7 @@
     width: auto;
   }
 }
-.freeBox___8B6Fb {
+.freeBox___5QtE {
   width: 100%;
   height: auto;
   max-width: 800px;
@@ -428,15 +220,21 @@
   min-width: 0;
 }
 @media (min-width: 0px) and (max-width: 768px) {
-  .freeBox___8B6Fb {
+  .freeBox___5QtE {
     display: flex;
   }
 }
 .slotTargetSchedule {
   font-family: var(--token-ongjxvNd3);
-  font-size: 20px;
+  font-size: 30px;
+  text-align: center;
 }
-.freeBox___56PE {
+@media (max-width: 640px) {
+  .slotTargetSchedule {
+    font-size: 24px;
+  }
+}
+.freeBox__itwZt {
   display: flex;
   position: relative;
   flex-direction: column;
@@ -445,16 +243,22 @@
   min-width: 0;
 }
 @media (min-width: 0px) and (max-width: 768px) {
-  .freeBox___56PE {
+  .freeBox__itwZt {
     justify-content: flex-start;
     align-items: center;
   }
 }
 .slotTargetAddress {
   font-family: var(--token-ongjxvNd3);
-  font-size: 20px;
+  font-size: 30px;
+  text-align: center;
 }
-.freeBox__uAy7D {
+@media (max-width: 640px) {
+  .slotTargetAddress {
+    font-size: 24px;
+  }
+}
+.freeBox__btpo0 {
   flex-direction: row;
   display: flex;
   position: relative;
@@ -464,18 +268,18 @@
   min-width: 0;
   padding: 0px;
 }
-.freeBox__uAy7D > :global(.__wab_flex-container) {
+.freeBox__btpo0 > :global(.__wab_flex-container) {
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   min-width: 0;
   margin-left: calc(0px - var(--token-xmbQtwPzW));
   width: calc(100% + var(--token-xmbQtwPzW));
 }
-.freeBox__uAy7D > :global(.__wab_flex-container) > *,
-.freeBox__uAy7D > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.freeBox__uAy7D > :global(.__wab_flex-container) > picture > img,
-.freeBox__uAy7D
+.freeBox__btpo0 > :global(.__wab_flex-container) > *,
+.freeBox__btpo0 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__btpo0 > :global(.__wab_flex-container) > picture > img,
+.freeBox__btpo0
   > :global(.__wab_flex-container)
   > :global(.__wab_slot)
   > picture
@@ -483,21 +287,27 @@
   margin-left: var(--token-xmbQtwPzW);
 }
 @media (min-width: 0px) and (max-width: 768px) {
-  .freeBox__uAy7D {
+  .freeBox__btpo0 {
     width: auto;
   }
 }
 @media (min-width: 0px) and (max-width: 768px) {
-  .freeBox__uAy7D > :global(.__wab_flex-container) {
+  .freeBox__btpo0 > :global(.__wab_flex-container) {
     align-items: flex-start;
     justify-content: center;
   }
 }
 .slotTargetPostCode {
   font-family: var(--token-ongjxvNd3);
-  font-size: 20px;
+  font-size: 30px;
+  text-align: center;
 }
-.freeBox__lSiAk {
+@media (max-width: 640px) {
+  .slotTargetPostCode {
+    font-size: 24px;
+  }
+}
+.freeBox__ebdkx {
   position: relative;
   padding-top: 0px;
   display: flex;
@@ -505,5 +315,11 @@
 }
 .slotTargetCity {
   font-family: var(--token-ongjxvNd3);
-  font-size: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+@media (max-width: 640px) {
+  .slotTargetCity {
+    font-size: 24px;
+  }
 }
